--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,39 @@ h1{
     border-radius: 10px;
     margin-top: 10px;
 }
-.row button{
+.button{
     margin: 20px 20px 0 20px;
     padding: 5px;
     border: 1px solid brown;
     border-radius: 10px;
 }
- 
+a{
+    text-decoration: none;
+    color: black;
+}
 .col{
-    padding:0 10px;
+    padding: 0 10px;
+}
+
+/* Stili biglietto */
+#biglietto{
+    display: none;
+}
+#biglietto .col{
+    flex-grow: 1;
+    color: black;
+}
+#dp{
+    text-align: left;
+}
+#riga_biglietto{
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+#col_nome{
+    background-color: rgb(161, 161, 161);
+}
+.col h4{
+    margin-bottom: 40px;
+    
 }
